delete button as an emoji and edit and add game buttons improved