@@ -1,3 +1,4 @@
+// === GameFormController.java ===
 package org.example.controller;
 
 import javafx.fxml.FXML;
@@ -10,6 +11,7 @@ import org.example.model.Game;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class GameFormController {
 
@@ -17,9 +19,14 @@ public class GameFormController {
     @FXML private TextField developerField;
     @FXML private TextField publisherField;
     @FXML private TextField genreField;
+    @FXML private TextField platformsField;
+    @FXML private TextField translatorsField;
     @FXML private TextField steamIdField;
     @FXML private TextField yearField;
-    @FXML private TextField tagsField;
+    @FXML private TextField playtimeField;
+    @FXML private TextField formatField;
+    @FXML private TextField languageField;
+    @FXML private TextField ratingField;
     @FXML private VBox tagBox;
 
     private Game game;
@@ -30,10 +37,16 @@ public class GameFormController {
             titleField.setText(game.getTitle());
             developerField.setText(game.getDeveloper());
             publisherField.setText(game.getPublisher());
-            genreField.setText(String.join(",", game.getGenre()));
+            genreField.setText(String.join(",", safeList(game.getGenre())));
+            platformsField.setText(String.join(",", safeList(game.getPlatforms())));
+            translatorsField.setText(String.join(",", safeList(game.getTranslators())));
             steamIdField.setText(game.getSteamId());
             yearField.setText(String.valueOf(game.getReleaseYear()));
-            tagsField.setText(String.join(", ", game.getTags()));
+            playtimeField.setText(String.valueOf(game.getPlaytime()));
+            formatField.setText(game.getFormat());
+            languageField.setText(game.getLanguage());
+            ratingField.setText(String.valueOf(game.getRating()));
+
             for (Node node : tagBox.getChildren()) {
                 if (node instanceof CheckBox cb && game.getTags() != null) {
                     cb.setSelected(game.getTags().contains(cb.getText()));
@@ -42,44 +55,65 @@ public class GameFormController {
         }
     }
 
-    public Game getGameFromForm() {
-        String title = titleField.getText();
-        String developer = developerField.getText();
-        String publisher = publisherField.getText();
-        String genreInput = genreField.getText();
-        String steamId = steamIdField.getText();
-        int year = 0;
+    @FXML
+    private void onSave() {
+        game = new Game();
+
+        game.setTitle(titleField.getText());
+        game.setDeveloper(developerField.getText());
+        game.setPublisher(publisherField.getText());
+
+        game.setGenre(splitByComma(genreField.getText()));
+        game.setPlatforms(splitByComma(platformsField.getText()));
+        game.setTranslators(splitByComma(translatorsField.getText()));
+
+        game.setSteamId(steamIdField.getText());
+
         try {
-            year = Integer.parseInt(yearField.getText());
+            game.setReleaseYear(Integer.parseInt(yearField.getText()));
         } catch (NumberFormatException e) {
-            year = 0;
+            game.setReleaseYear(0);
         }
 
-        List<String> genres = Arrays.asList(genreInput.split(","));
+        try {
+            game.setPlaytime(Double.parseDouble(playtimeField.getText()));
+        } catch (NumberFormatException e) {
+            game.setPlaytime(0.0);
+        }
+
+        game.setFormat(formatField.getText());
+        game.setLanguage(languageField.getText());
+
+        try {
+            game.setRating(Double.parseDouble(ratingField.getText()));
+        } catch (NumberFormatException e) {
+            game.setRating(0.0);
+        }
 
         List<String> selectedTags = tagBox.getChildren().stream()
-                .filter(n -> n instanceof CheckBox && ((CheckBox) n).isSelected())
-                .map(n -> ((CheckBox) n).getText())
-                .toList();
-
-        if (game == null) {
-            game = new Game();
-        }
-
+                .filter(node -> node instanceof CheckBox && ((CheckBox) node).isSelected())
+                .map(node -> ((CheckBox) node).getText())
+                .collect(Collectors.toList());
         game.setTags(selectedTags);
-        game.setTitle(title);
-        game.setDeveloper(developer);
-        game.setPublisher(publisher);
-        game.setGenre(genres);
-        game.setSteamId(steamId);
-        game.setReleaseYear(year);
 
+        Stage stage = (Stage) titleField.getScene().getWindow();
+        stage.close();
+    }
+
+    public Game getGameFromForm() {
         return game;
     }
 
-    @FXML
-    private void onSaveClicked() {
-        Stage stage = (Stage) titleField.getScene().getWindow();
-        stage.close();
+    private List<String> splitByComma(String input) {
+        return input == null || input.isBlank()
+                ? List.of()
+                : Arrays.stream(input.split(","))
+                .map(String::trim)
+                .filter(s -> !s.isEmpty())
+                .toList();
+    }
+
+    private List<String> safeList(List<String> list) {
+        return list == null ? List.of() : list;
     }
 }
